<resources>
    <string name="api_map" translatable="false">AIzaSyA2MpQXT9jp17KlnQQT_4xc6bgJTC6_Zr8</string>
    <string name="app_name">Zeus Weather</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_alert">Alert</string>
    <string name="title_favourite">Favourite</string>
    <string name="_7_days_forecast">7 Days Forecast</string>
    <string name="max">Max : </string>
    <string name="min">Min : </string>
    <string name="feel_like">Feel Like</string>
    <string name="current">Now</string>
    <string name="humidity">humidity</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="search_here">Search Here</string>
    <string name="enable">enable</string>
    <string name="disable">disable</string>
    <string name="notification">notification</string>
    <string name="save">Save</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="metre_sec">Metre/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="favourite_weather_condition">favourite weather condition</string>
    <string name="weather_condition">Weather Condition :</string>
    <string name="close">Close</string>
    <string name="weather_details">Weather Details :</string>
    <string name="no_alert">No Alert this time </string>
    <string name="it_seem">It seem weather will be </string>
    <string name="EnableNotiDialog">Enable Notification Dialog</string>
    <string name="EnableNotiDialogContent" translatable="false">Do you want  enable notification dialog to show you foses and refill over apps?</string>
    <string name="some_details">here some details of weather</string>
    <string name="colon" translatable="false">\u0020:\u0020</string>
    <string name="add_favourite">Add favourites countries</string>
    <string name="imageweather" translatable="false">imageWeather</string>
    <string name="Pressure">pressure</string>
    <string name="cloud">Cloud</string>

    <string name="settings">Settings:</string>
    <string name="wind_speed_unit">Wind Speed Unit:</string>
    <string name="temperature_unit">Temperature Unit:</string>
    <string name="app_widget_description" translatable="false">Add Widget and keep in touch</string>
    <string name="add_alert">add alert for weather change</string>
    <string name="open_internet">Open Internet and Try again</string>
    <string name="precentage" translatable="false">%</string>
    <string name="pressure_symbol" translatable="false">hPa</string>
    <string name="select_location">Selected Location</string>
    <string name="do_you_location">Do you want to select this location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>