<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/main_bg"
    tools:context=".ui.home.HomeFragment">

    <FrameLayout
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:elevation="20sp"
        android:visibility="gone"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="21dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_anime" />

        <View

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".2"
            android:background="@color/white"
            android:elevation="15dp" />
    </FrameLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"

        android:background="@drawable/gradient_home_card"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/home_date_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/home_main_tem_textView"
            tools:text="Sat 12 Mar 2022" />

        <TextView
            android:id="@+id/home_clock_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/home_date_textView"
            app:layout_constraintStart_toStartOf="@+id/home_date_textView"
            app:layout_constraintTop_toBottomOf="@id/home_date_textView"
            tools:text="05:49" />

        <TextView
            android:id="@+id/home_main_tem_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="40sp"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_city_textview"
            tools:text="10" />

        <TextView
            android:id="@+id/home_degree_symbol_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/home_main_tem_textView"
            app:layout_constraintTop_toTopOf="@+id/home_main_tem_textView"
            tools:text="°F" />

        <ImageView
            android:id="@+id/home_image_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imageweather"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:src="@drawable/testimgae"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name_city_textview" />

        <TextView
            android:id="@+id/home_description_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_image_imageView"
            tools:text="partly Cloudy" />

        <TextView
            android:id="@+id/home_max_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_feel_like_textview"
            tools:text="Max : 15°F" />

        <TextView
            android:id="@+id/home_min_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/home_max_textView"
            app:layout_constraintTop_toTopOf="@+id/home_max_textView"
            tools:text="Min : 15°F" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="26dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_max_textView">

            <RelativeLayout
                android:id="@+id/layout_humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_weight="1"
                android:gravity="start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_weatherIcon">

                <ImageView
                    android:id="@+id/img_humidity"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/humidity"
                    app:tint="@color/white"
                    android:contentDescription="@string/imageweather" />

                <TextView
                    android:id="@+id/txtVw_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_humidity"
                    android:layout_centerInParent="true"
                    android:text="@string/humidity"
                    android:textColor="@color/white" />

                <TextView

                    android:id="@+id/txtVw_ValueHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtVw_humidity"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/relativeLayout"
                app:layout_constraintHorizontal_bias="0.54"
                app:layout_constraintStart_toEndOf="@+id/layout_humidity"
                app:layout_constraintTop_toBottomOf="@+id/img_weatherIcon">

                <ImageView
                    android:id="@+id/img_pressure"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/pressure"
                    android:contentDescription="@string/imageweather" />

                <TextView
                    android:id="@+id/txtVw_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_pressure"
                    android:layout_centerInParent="true"
                    android:text="@string/Pressure"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtVw_valuePressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtVw_pressure"
                    android:layout_centerInParent="true"
                    android:layout_margin="4dp"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_weatherIcon">

                <ImageView
                    android:id="@+id/img_speed"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/wind"
                    android:contentDescription="@string/imageweather" />

                <TextView
                    android:id="@+id/txtVw_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_speed"
                    android:layout_centerInParent="true"
                    android:text="@string/wind_speed"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtVw_valueSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtVw_speed"
                    android:layout_centerInParent="true"
                    android:layout_margin="4dp"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_cloud"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_weight="1"
                android:gravity="start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_weatherIcon">

                <ImageView
                    android:id="@+id/img_cloud"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/cloudy"
                    android:contentDescription="@string/imageweather" />

                <TextView
                    android:id="@+id/txtVw_cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_cloud"
                    android:layout_centerInParent="true"
                    android:text="@string/cloud"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtVw_ValueCloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtVw_cloud"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/white"
                    tools:text="75" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/home_feel_like_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feel_like"
            android:textColor="@color/white"
            android:textAlignment="center"

            app:layout_constraintStart_toStartOf="@+id/home_main_tem_textView"
            app:layout_constraintTop_toBottomOf="@+id/home_main_tem_textView" />

        <TextView
            android:id="@+id/feel_like_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/home_feel_like_textview"
            app:layout_constraintStart_toEndOf="@+id/home_feel_like_textview"
            app:layout_constraintTop_toBottomOf="@+id/home_main_tem_textView"
            tools:text="18" />

        <TextView
            android:id="@+id/name_city_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="City" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_hourly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="16dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_24_hour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/hourly_card"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="37dp"
            tools:listitem="@layout/item_hourly" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_seven_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/_7_days_forecast"
        android:textColor="@color/primary_text_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_hourly" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/daily_card"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_seven_forecast">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/seven_day_forecast_recycleview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_daily" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>